--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <!-- bedanken partners = word partner -->
         <section class="thanks">
-            <h4>Blijf op de hoogte van onze events</h4>
+            <h4>Wij bedanken onze trouwe partners</h4>
             <a href="">WORD PARTNER<img src="assets/arrow-right.svg" alt=""></a>
         </section>
 
