--- a/detailpagina.html
+++ b/detailpagina.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailpagina</title>
-    <!-- <link rel="stylesheet" href="./styles/detailpagina.css">
-    <script defer src="./index.js"></script> -->
+    <link rel="stylesheet" href="./styles/detailpagina.css">
+    <script defer src="./index.js"></script>
 </head>
 <body>
     
@@ -21,7 +21,7 @@
                     <li><a href="">leden</a></li>
                     <li><a href="">vacatures</a></li>
                     <div class="right-container">
-                        <li><a href="">inloggen<img src="assets/arrow-right.svg" alt=""></a></li>
+                        <li><a href="" class="blauwe-link">inloggen<img src="assets/right-blauw.svg" alt=""></a></li>
                         <li><a href="">word lid<img src="assets/arrow-right.svg" alt=""></a></li>
                     </div>
                 </ul>
@@ -54,7 +54,22 @@
         <section class="tabellen">
             <h3>Agenda</h3>
             <table>
-
+                <tr>
+                    <td>Intro</td>
+                    <td>09:00 - 10:00</td>
+                </tr>
+                <tr>
+                    <td>Speaker 1</td>
+                    <td>00:00 - 00:00</td>
+                </tr>
+                <tr>
+                    <td>Speaker 2</td>
+                    <td>00:00 - 00:00</td>
+                </tr>
+                <tr>
+                    <td>Q&A</td>
+                    <td>00:00 - 00:00</td>
+                </tr>
             </table>
 
             <h3>Inschrijven</h3>
@@ -76,7 +91,7 @@
     <footer>
         <div class="first">
             <img id="logo" src="assets/logo.svg" alt="logo">
-            <a href="">inloggen <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
+            <a href="" class="blauwe-link">inloggen<img src="assets/right-blauw.svg" alt=""></a>
         </div>
 
         <nav class="second">
