gezamenlijke css ingevoegd

--- a/detailpagina.html
+++ b/detailpagina.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailpagina</title>
-    <link rel="stylesheet" href="./styles/detailpagina.css">
+    <link rel="stylesheet" href="./styles/dda-gezamenlijk.css">
+    <!-- <link rel="stylesheet" href="./styles/detailpagina.css"> -->
     <script defer src="./index.js"></script>
 </head>
 <body>
