gezamenlijke css deels toegepast

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="">leden</a></li>
                     <li><a href="">vacatures</a></li>
                     <div class="right-container">
-                        <li><a href="">inloggen<img src="assets/arrow-right.svg" alt=""></a></li>
+                        <li><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
                         <li><a href="">word lid<img src="assets/arrow-right.svg" alt=""></a></li>
                     </div>
                 </ul>
@@ -60,7 +60,7 @@
                 <div class="text">
                     <p class="label"><abbr title="Dutch Digital Day">DDD</abbr></p>
                     <p class="data">wo 09 nov / Amsterdam</p>
-                    <h3>Dutch Digital Day: The 10th edition</h3>
+                    <h2>Dutch Digital Day: The 10th edition</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -70,7 +70,7 @@
                 <div class="text">
                     <p class="label"><abbr title="Dutch Digital Day">DDD</abbr></p>
                     <p class="data">do 10 nov / Utrecht</p>
-                    <h3>Leden bijeenkomst</h3>
+                    <h2>Leden bijeenkomst</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -80,7 +80,7 @@
                 <div class="text">
                     <p class="label">VERGADERING</p>
                     <p class="data">ma 31 dec / Amsterdam</p>
-                    <h3>Creative Jam Dutch Design Week</h3>
+                    <h2>Creative Jam Dutch Design Week</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -106,7 +106,7 @@
             <ul>
                 <li>
                     <p class="label">UX</p>
-                    <h4>Creative Jam Dutch Design Week</h4>
+                    <h3 class="lg">Creative Jam Dutch Design Week</h3>
                     <div class="flex-container">
                         <p class="data">01 nov / Eindhoven</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -114,7 +114,7 @@
                 </li>
                 <li>
                     <p class="label">HR</p>
-                    <h4>DDA Ledenbijeenkomst</h4>
+                    <h3 class="lg">DDA Ledenbijeenkomst</h3>
                     <div class="flex-container">
                         <p class="data">09 nov / Amsterdam</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -122,7 +122,7 @@
                 </li>
                 <li>
                     <p class="label">hackathon</p>
-                    <h4>Maak je eigen game</h4>
+                    <h3 class="lg">Maak je eigen game</h3>
                     <div class="flex-container">
                         <p class="data">01 jan / Amsterdam</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -130,7 +130,7 @@
                 </li>
                 <li>
                     <p class="label">UX</p>
-                    <h4>Creative Jam Dutch Design Week</h4>
+                    <h3 class="lg">Creative Jam Dutch Design Week</h3>
                     <div class="flex-container">
                         <p class="data">01 nov / Eindhoven</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -138,7 +138,7 @@
                 </li>
                 <li>
                     <p class="label">HR</p>
-                    <h4>DDA Ledenbijeenkomst</h4>
+                    <h3 class="lg">DDA Ledenbijeenkomst</h3>
                     <div class="flex-container">
                         <p class="data">09 NOV / AMSTERDAM</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -146,7 +146,7 @@
                 </li>
                 <li>
                     <p class="label">hackathon</p>
-                    <h4>Maak je eigen game</h4>
+                    <h3 class="lg">Maak je eigen game</h3>
                     <div class="flex-container">
                         <p class="data">01 jan / Amsterdam</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -154,7 +154,7 @@
                 </li>
                 <li>
                     <p class="label">HR</p>
-                    <h4>DDA Ledenbijeenkomst</h4>
+                    <h3 class="lg">DDA Ledenbijeenkomst</h3>
                     <div class="flex-container">
                         <p class="data">09 nov / Amsterdam</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -162,7 +162,7 @@
                 </li>
                 <li>
                     <p class="label">UX</p>
-                    <h4>Creative Jam Dutch Design Week</h4>
+                    <h3 class="lg">Creative Jam Dutch Design Week</h3>
                     <div class="flex-container">
                         <p class="data">01 nov / Eindhoven</p>
                         <a class="blauwe-link" href="">DETAILS<img src="assets/right-blauw.svg" alt=""></a>
@@ -178,7 +178,7 @@
 
         <!-- hele rij plaatsgevonden events -->
         <section class="verleden">
-            <h3>PLAATSGEVONDEN EVENTS:</h3>
+            <h3>plaatsgevonden events:</h3>
             <ul>
                 <li>
                     <p class="label">UX</p>
@@ -252,7 +252,7 @@
     <footer>
         <div class="first">
             <img id="logo" src="assets/logo.svg" alt="logo">
-            <a href="">inloggen <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
+            <a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a>
         </div>
 
         <nav class="second">
