buttons gemaakt + begin div uit ul

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <li><a href="">publicaties</a></li>
                     <li><a href="">leden</a></li>
                     <li><a href="">vacatures</a></li>
-                    <div class="right-container">
-                        <li><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
-                        <li><a href="">word lid<img src="assets/arrow-right.svg" alt=""></a></li>
-                    </div>
                 </ul>
+                    <ul>
+                        <li><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
+                        <li><a class="btn" href=""><span>word lid</span><div><img src="assets/arrow-right.svg" alt=""></div></a></li>
+                    </ul>
             </div>
 
             <button class="ham-menu" aria-label="navigatie menu">
@@ -60,7 +60,7 @@
                 <div class="text">
                     <p class="label"><abbr title="Dutch Digital Day">DDD</abbr></p>
                     <p class="data">wo 09 nov / Amsterdam</p>
-                    <h2>Dutch Digital Day: The 10th edition</h2>
+                    <h2 class="xl">Dutch Digital Day: The 10th edition</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -70,7 +70,7 @@
                 <div class="text">
                     <p class="label"><abbr title="Dutch Digital Day">DDD</abbr></p>
                     <p class="data">do 10 nov / Utrecht</p>
-                    <h2>Leden bijeenkomst</h2>
+                    <h2 class="xl">Leden bijeenkomst</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -80,7 +80,7 @@
                 <div class="text">
                     <p class="label">VERGADERING</p>
                     <p class="data">ma 31 dec / Amsterdam</p>
-                    <h2>Creative Jam Dutch Design Week</h2>
+                    <h2 class="xl">Creative Jam Dutch Design Week</h2>
                     <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
@@ -95,8 +95,8 @@
                 <button type="submit">zoek</button>
             </form>
             <div>
-                <button>THEMA</button>
-                <button>LOCATIE</button>
+                <button class="btn"><span>THEMA</span><div><img src="assets/Icon.png" alt=""></div></button>
+                <button class="btn"><span>LOCATIE</span><div><img src="assets/Icon.png" alt=""></div></button>
             </div>
         </section>
 
@@ -224,13 +224,13 @@
         <!-- op de hoogte blijven = aanmelden -->
         <section class="up2date">
             <h4>Blijf op de hoogte van onze events</h4>
-            <a href="">AANMELDEN <img src="assets/arrow-right.svg" alt=""></a>
+            <a class="btn" href=""><span>aanmelden</span><div><img src="assets/arrow-right.svg" alt=""></div></a>
         </section>
 
         <!-- bedanken partners = word partner -->
         <section class="thanks">
             <h4>Wij bedanken onze trouwe partners</h4>
-            <a href="">WORD PARTNER<img src="assets/arrow-right.svg" alt=""></a>
+            <a class="btn" href=""><span>word partner</span><div><img src="assets/arrow-right.svg" alt=""></div></a>
         </section>
 
         <div class="logos">
