--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <!-- laden content -->
         <div class="laden">
-            <p>meer events aan het laden...</p>
+            <p>meer events aan het laden <img src="assets/reload.png" alt=""></p>
         </div>
 
         <!-- hele rij plaatsgevonden events -->
@@ -218,7 +218,7 @@
 
         <!-- laden content -->
         <div class="laden">
-            <p>meer events aan het laden...</p>
+            <p>meer events aan het laden <img src="assets/reload.png" alt=""></p>
         </div>
 
         <!-- op de hoogte blijven = aanmelden -->
