filters naast elkaar

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <input type="search" id="event" name="search">
                 <button type="submit">zoek</button>
             </form>
-            <div>
+            <div class="right-container">
                 <button class="btn"><span>THEMA</span><div><img src="assets/Icon.png" alt=""></div></button>
                 <button class="btn"><span>LOCATIE</span><div><img src="assets/Icon.png" alt=""></div></button>
             </div>
