kleur nav ham-menu aanpast

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
 
-        <nav>
+        <nav class="scrolled">
             <a href="#"><img src="assets/logo.svg" alt="Dutch Digital Agencies"></a>
             <div class="off-screen-menu ">
                 <ul>
