nav eindeluk gefixt

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
                     <li><a href="">publicaties</a></li>
                     <li><a href="">leden</a></li>
                     <li><a href="">vacatures</a></li>
+
+                    <li class="align-right"><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
+                    <li><a class="btn" href=""><span>word lid</span><div><img src="assets/arrow-right.svg" alt=""></div></a></li>
                 </ul>
-                    <ul>
-                        <li><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
-                        <li><a class="btn" href=""><span>word lid</span><div><img src="assets/arrow-right.svg" alt=""></div></a></li>
-                    </ul>
             </div>
 
             <button class="ham-menu" aria-label="navigatie menu">
