links toegevoegd + wijziging nav detail

--- a/detailpagina.html
+++ b/detailpagina.html
@@ -12,7 +12,7 @@
     
     <header>
         <nav>
-            <a href="#"><img src="assets/logo.svg" alt="Dutch Digital Agencies"></a>
+            <a href="index.html"><img src="assets/logo.svg" alt="Dutch Digital Agencies"></a>
             
             <div class="off-screen-menu ">
                 <ul>
@@ -21,10 +21,9 @@
                     <li><a href="">publicaties</a></li>
                     <li><a href="">leden</a></li>
                     <li><a href="">vacatures</a></li>
-                    <div class="right-container">
-                        <li><a href="" class="blauwe-link">inloggen<img src="assets/right-blauw.svg" alt=""></a></li>
-                        <li><a href="">word lid<img src="assets/arrow-right.svg" alt=""></a></li>
-                    </div>
+
+                    <li class="align-right"><a class="blauwe-link" href="">inloggen <img src="assets/right-blauw.svg" alt=""></a></li>
+                    <li><a class="btn" href=""><span>word lid</span><div><img src="assets/arrow-right.svg" alt=""></div></a></li>
                 </ul>
             </div>
 
@@ -39,7 +38,7 @@
 
     <main>
         <section class="top">
-            <a href=""><img src="assets/arrow-left.svg" alt="">terug naar home</a>
+            <a href="index.html"><img src="assets/arrow-left.svg" alt="">terug naar home</a>
             <h1>Ledenbijeenkomst</h1>
             <p class="data">09 nov 2023 / Utrecht</p>
             <img src="assets/leden-bijeenkomst.png" alt="">
