--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="label"><abbr title="Dutch Digital Day">DDD</abbr></p>
                     <p class="data">do 10 nov / Utrecht</p>
                     <h2 class="xl">Leden bijeenkomst</h2>
-                    <a class="blauwe-link" href="">details<img src="assets/right-blauw.svg" alt=""></a>
+                    <a class="blauwe-link" href="detailpagina.html">details<img src="assets/right-blauw.svg" alt=""></a>
                 </div>
             </article>
 
