big update css detailpagina

--- a/detailpagina.html
+++ b/detailpagina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailpagina</title>
     <link rel="stylesheet" href="./styles/dda-gezamenlijk.css">
-    <!-- <link rel="stylesheet" href="./styles/detailpagina.css"> -->
+    <link rel="stylesheet" href="./styles/detailpagina.css">
     <script defer src="./index.js"></script>
 </head>
 <body>
@@ -41,7 +41,7 @@
             <a href="index.html"><img src="assets/arrow-left.svg" alt="">terug naar home</a>
             <h1>Ledenbijeenkomst</h1>
             <p class="data">09 nov 2023 / Utrecht</p>
-            <img src="assets/leden-bijeenkomst.png" alt="">
+            <img class="height" src="assets/leden-bijeenkomst.png" alt="">
         </section>
 
         <section class="info">
@@ -72,18 +72,18 @@
                 </tr>
             </table>
 
-            <h3>Inschrijven</h3>
+            <h3 class="table2">Inschrijven</h3>
             <form action="">        <!-- nog invullen -->
             </form> 
             
-             <a href="" class="design">Schrijf me in</a>  <!-- pijl nog toevoegen + link -->
+             <a href="" class="btn"><span>Schrijf me in</span><div><img src="assets/arrow-right.svg" alt=""></div></a>
         </section>
 
         <section class="locatie">
-            <img src="assets/" alt="">      <!-- afbeelding nog toevoegen -->
+            <img class="height" src="assets/location_img.png" alt="">      <!-- afbeelding nog toevoegen -->
             <p class="label">locatie</p>
-            <h4>Stadskasteel Oudaen Oudegracht 99 3511 AE Utrecht</h4>
-            <a href="" class="design">route op google maps</a>  <!-- pijl nog toevoegen + link -->
+            <h4 class="xl">Stadskasteel Oudaen Oudegracht 99 3511 AE Utrecht</h4>
+            <a href="" class="btn"><span>route op google maps</span><div><img src="assets/arrow-right.svg" alt=""></div></a>  <!-- link nog toevoegen -->
         </section>
     </main>
 
