update css tabel voornamelijk

--- a/detailpagina.html
+++ b/detailpagina.html
@@ -39,7 +39,7 @@
     <main>
         <section class="top">
             <a href="index.html"><img src="assets/arrow-left.svg" alt="">terug naar home</a>
-            <h1>Ledenbijeenkomst</h1>
+            <h1>Leden&shy;bijeenkomst</h1>
             <p class="data">09 nov 2023 / Utrecht</p>
             <img class="height" src="assets/leden-bijeenkomst.png" alt="">
         </section>
@@ -52,7 +52,7 @@
         </section>
 
         <section class="tabellen">
-            <h3>Agenda</h3>
+            <h3 class="xxl">Agenda</h3>
             <table>
                 <tr>
                     <td>Intro</td>
@@ -72,7 +72,7 @@
                 </tr>
             </table>
 
-            <h3 class="table2">Inschrijven</h3>
+            <h3 class="xxl">Inschrijven</h3>
             <form action="">        <!-- nog invullen -->
             </form> 
             
@@ -80,7 +80,7 @@
         </section>
 
         <section class="locatie">
-            <img class="height" src="assets/location_img.png" alt="">      <!-- afbeelding nog toevoegen -->
+            <img class="height" src="assets/location_img.png" alt="">  
             <p class="label">locatie</p>
             <h4 class="xl">Stadskasteel Oudaen Oudegracht 99 3511 AE Utrecht</h4>
             <a href="" class="btn"><span>route op google maps</span><div><img src="assets/arrow-right.svg" alt=""></div></a>  <!-- link nog toevoegen -->
