--- a/detailpagina.html
+++ b/detailpagina.html
@@ -73,9 +73,43 @@
             </table>
 
             <h3 class="xxl">Inschrijven</h3>
-            <form action="">        <!-- nog invullen -->
-            </form> 
-            
+            <form action="" class="styling-form">
+                <label>
+                    <span>Naam</span>
+                    <input type="text" required placeholder="">
+                </label>
+            </form>
+            <form action="" class="styling-form">
+                <label>
+                    <span>Achternaam</span>
+                    <input type="text" required placeholder="">
+                </label>
+            </form>
+            <form action="" class="styling-form">
+                <label>
+                    <span>Functie</span>
+                    <input type="text" required placeholder="">
+                </label>
+            </form>
+            <form action="" class="styling-form">
+                <label>
+                    <span>Bedrijfsnaam</span>
+                    <input type="text" required placeholder="">
+                </label>
+            </form>
+            <form action="" class="styling-form">
+                <label>
+                    <span>E-mailadres</span>
+                    <input type="email" required placeholder="">
+                </label>
+            </form>
+            <form action="" class="styling-form">
+                <label>
+                    <span>Telefoonnummer</span>
+                    <input type="tel" required placeholder="">
+                </label>
+            </form>
+
              <a href="" class="btn"><span>Schrijf me in</span><div><img src="assets/arrow-right.svg" alt=""></div></a>
         </section>
 
