--- a/input.html
+++ b/input.html
@@ -14,9 +14,10 @@
     </label>   
 </form>  
 
-<form action="">
-    <label>Zoek een event...
-    <input type="search"/>
+<form action="" class="styling-form">
+    <label>
+        <span>Zoek een event...</span>
+        <input type="search" placeholder=""/>
     </label>
 </form>
 
