begin responsive detailpagina

--- a/detailpagina.html
+++ b/detailpagina.html
@@ -115,9 +115,11 @@
 
         <section class="locatie">
             <img class="height" src="assets/location_img.png" alt="">  
+        <div class="flex-container"> 
             <p class="label">locatie</p>
             <h4 class="xl">Stadskasteel Oudaen Oudegracht 99 3511 AE Utrecht</h4>
             <a href="" class="btn"><span>route op google maps</span><div><img src="assets/arrow-right.svg" alt=""></div></a>  <!-- link nog toevoegen -->
+        </div>
         </section>
     </main>
 
