--- a/detailpagina.html
+++ b/detailpagina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailpagina</title>
     <link rel="stylesheet" href="./styles/dda-gezamenlijk.css">
-    <link rel="stylesheet" href="./styles/detailpagina.css">
+    <link rel="stylesheet" href="./styles/detailpagina.css?v=2">
     <script defer src="./index.js"></script>
 </head>
 <body>
@@ -118,7 +118,8 @@
         <div class="flex-container"> 
             <p class="label">locatie</p>
             <h4 class="xl">Stadskasteel Oudaen Oudegracht 99 3511 AE Utrecht</h4>
-            <a href="" class="btn"><span>route op google maps</span><div><img src="assets/arrow-right.svg" alt=""></div></a>  <!-- link nog toevoegen -->
+            <a href="https://www.google.com/maps/dir//Oudegracht+99,+3511+AE+Utrecht/@52.0928387,5.0342908,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47c66f449d84135b:0x127b36b2253451be!2m2!1d5.116691!2d52.0928674?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" 
+                class="btn"><span>route op google maps</span><div><img src="assets/arrow-right.svg" alt=""></div></a>  <!-- link nog toevoegen -->
         </div>
         </section>
     </main>
