--- a/detailpagina.html
+++ b/detailpagina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detailpagina</title>
     <link rel="stylesheet" href="./styles/dda-gezamenlijk.css">
-    <link rel="stylesheet" href="./styles/detailpagina.css?v=2">
+    <link rel="stylesheet" href="./styles/detailpagina.css">
     <script defer src="./index.js"></script>
 </head>
 <body>
