--- a/detailpagina.html
+++ b/detailpagina.html
@@ -74,40 +74,34 @@
 
             <h3 class="xxl">Inschrijven</h3>
             <form action="" class="styling-form">
+        <div class="left-container">   
                 <label>
-                    <span>Naam</span>
+                    <span>Voornaam</span>
                     <input type="text" required placeholder="">
                 </label>
-            </form>
-            <form action="" class="styling-form">
                 <label>
                     <span>Achternaam</span>
                     <input type="text" required placeholder="">
                 </label>
-            </form>
-            <form action="" class="styling-form">
                 <label>
                     <span>Functie</span>
                     <input type="text" required placeholder="">
                 </label>
-            </form>
-            <form action="" class="styling-form">
+        </div> 
+        <div class="right-container">  
                 <label>
                     <span>Bedrijfsnaam</span>
                     <input type="text" required placeholder="">
                 </label>
-            </form>
-            <form action="" class="styling-form">
                 <label>
                     <span>E-mailadres</span>
                     <input type="email" required placeholder="">
                 </label>
-            </form>
-            <form action="" class="styling-form">
                 <label>
                     <span>Telefoonnummer</span>
                     <input type="tel" required placeholder="">
                 </label>
+        </div> 
             </form>
 
              <a href="" class="btn"><span>Schrijf me in</span><div><img src="assets/arrow-right.svg" alt=""></div></a>
