--- a/detailpagina.html
+++ b/detailpagina.html
@@ -6,6 +6,8 @@
     <title>Detailpagina</title>
     <link rel="stylesheet" href="./styles/dda-gezamenlijk.css">
     <link rel="stylesheet" href="./styles/detailpagina.css">
+    <link rel="stylesheet" href="./styles/font.css">
+    
     <script defer src="./index.js"></script>
 </head>
 <body>
