--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Events</title>
     <!DOCTYPE html>
     <html lang="nl">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <script defer src="./index.js"></script>
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./styles/font.css">
+        <script defer src="./index.js"></script>
     
 
     </html>
