--- a/detailpagina.html
+++ b/detailpagina.html
@@ -54,7 +54,7 @@
         </section>
 
         <section class="tabellen">
-            <h3 class="xxl">Agenda</h3>
+            <h2 class="xxl">Agenda</h2>
             <table>
                 <tr>
                     <td>Intro</td>
@@ -74,8 +74,8 @@
                 </tr>
             </table>
 
-            <h3 class="xxl">Inschrijven</h3>
-            <form action="" class="styling-form">
+            <h2 class="xxl">Inschrijven</h2>
+            <form action="#" class="styling-form">
         <div class="left-container">   
                 <label>
                     <span>Voornaam</span>
