--- a/index.html
+++ b/index.html
@@ -270,8 +270,10 @@
                 <br>Weesperplein 4B
                 <br>1018 XA Amsterdam
             </p>
-            <br><a href="tel:(0)854010391">(0)85 4010391</a>
-            <br><a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
+            <div class="margin">
+            <a href="tel:(0)854010391">(0)85 4010391</a>
+            <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
+        </div>
         </div>
     </footer>
 
